k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: talenthub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: talenthubines2026.azurecr.io/api-gateway:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: talenthub
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - port: 8085
      targetPort: 8085
