k8s/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: talenthub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: talenthubines2026.azurecr.io/eureka-server:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: talenthub
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
