k8s/nomenclature-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomenclature-service
  namespace: talenthub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nomenclature-service
  template:
    metadata:
      labels:
        app: nomenclature-service
    spec:
      containers:
        - name: nomenclature-service
          image: talenthubines2026.azurecr.io/nomenclature-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: nomenclature-service
  namespace: talenthub
spec:
  selector:
    app: nomenclature-service
  ports:
    - port: 8082
      targetPort: 8082
